# QuantumCryptographySDK

./: .gitignore  README.md  benchmark_harness.py  benchmark_overhead.py  benchmark_rust.py  docker-compose.yml  requirements.txt
.history/: .gitignore_20260224011906  README_20260317195818.md  README_20260317195935.md  README_20260317200040.md
.history/backend/: main_20260317141301.py
backend/: Dockerfile.dev  Dockerfile.prod  main.py  requirements.txt
backend/agility/: migration_simulator.py
backend/ai/: anomaly.py  anomaly_engine.py  explain.py  signals.py
backend/api/: admin.py  algorithms.py  anomaly.py  classical_api.py  encrypt_api.py  explain.py  kem_api.py  keys.py  metrics.py  migration.py  policy.py  policy_drift.py  replay.py  sign_api.py  simulations.py  telemetry.py
backend/auth/: database.py  google_oauth.py  jwt_handler.py  middleware.py  models.py  user_context.py
backend/crypto_core_rust/: Cargo.toml  runner.py  rust_bridge.py
backend/crypto_core_rust/src/: lib.rs  main.rs
backend/key_management/: keygen.py  lifecycle.py  metadata.py  migration.py  registry.py  rotation.py
backend/policy/: nist_pqc.py  parameter_validation.py  security_store.py
backend/simulations/: simulations.py
backend/telemetry/: audit_log.py  metrics.py  policy_drift.py  replay.py  telemetry.py
cli/: quantum_cli.py  runalltests.py  test_adversarial.py  test_benchmark_kem.py  test_functional_correctness.py  test_long_term_risk.py  test_policy_validation.py  test_sec_scaling.py
cli/utils/: rust_runner.py
frontend/: package-lock.json
tests/: test_crypto.py
(+116 files in other folders)
