[package]
name = "crypto_core_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto_core_bin"
path = "src/main.rs"

[lib]
name = "crypto_core_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Upgrade to v0.11 — better vendoring, no system OpenSSL dependency
oqs = { version = "0.11", features = ["vendored"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1